CSSVariableReferenceValue.h: error: member access into incomplete type 'WebCore::CSSVariableData' https://bugs.webkit.org/show_bug.cgi?id=264480

Reviewed by Antti Koivisto.

Looks like we need to actually import CSSVariableData.h.

* Source/WebCore/css/CSSVariableReferenceValue.h:

Canonical link: https://commits.webkit.org/270446@main